feat:add web domain

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "tailwindui-primer",
+  "name": "Gustavo Maciel",
+  "homepage": "www.gustavomaciel.xyz",
   "version": "0.1.0",
   "private": true,
   "scripts": {
