--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Gustavo Maciel",
+  "name": "gustavomaciel",
   "homepage": "www.gustavomaciel.xyz",
   "version": "0.1.0",
   "private": true,
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
@@ -15,6 +16,7 @@
     "autoprefixer": "^10.4.12",
     "clsx": "^1.2.1",
     "focus-visible": "^5.2.0",
+    "gh-pages": "^5.0.0",
     "next": "13.4.2",
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
