--- a/package.json
+++ b/package.json
@@ -1,46 +1,34 @@
 {
-  "name": "tailwindui-studio",
+  "name": "gustavomaciel",
+  "homepage": "www.gustavomaciel.xyz",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
-    "@headlessui/react": "^1.7.15",
-    "@leafac/rehype-shiki": "^2.2.1",
-    "@mdx-js/loader": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.4.8",
-    "autoprefixer": "^10.4.7",
-    "clsx": "^1.2.0",
-    "escape-string-regexp": "^5.0.0",
-    "fast-glob": "^3.2.12",
+    "@headlessui/react": "^1.7.13",
+    "autoprefixer": "^10.4.12",
+    "clsx": "^1.2.1",
     "focus-visible": "^5.2.0",
     "framer-motion": "^10.12.16",
-    "next": "13.4.9",
+    "gh-pages": "^5.0.0",
+    "next": "13.4.2",
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recma-import-images": "0.0.3",
-    "remark-gfm": "^3.0.1",
-    "remark-rehype-wrap": "0.0.3",
-    "remark-unwrap-images": "^3.0.1",
-    "shiki": "^0.11.1",
-    "tailwindcss": "^3.3.2",
-    "unified-conditional": "0.0.2"
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
     "prettier": "^2.8.7",
-    "prettier-plugin-tailwindcss": "^0.2.6"
-  },
-  "preferRelative": true,
-  "browser": {
-    "fs": false
+    "prettier-plugin-tailwindcss": "^0.2.6",
+    "sharp": "^0.32.0"
   }
 }
